--- a/kinh-nghiem/may-tinh/cryptocurrency.html
+++ b/kinh-nghiem/may-tinh/cryptocurrency.html
@@ -247,11 +247,12 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <br>Trong hệ-thống Bitcoin, hacker chỉ cần khoá-bí-mật là trở thành chủ của số bitcoin trong tài-khoản; hacker sẽ nhanh-chóng chuyển hết bitcoin trong tài-khoản sang chỗ khác trước khi chủ wallet kịp biết.</p>
 
 <h3 id="tradeplatform">Sàn-giao-dịch</h3>
-<p>Sàn-giao-dịch cryptocurrency hoạt-động như một ngân-hàng. Khách-hàng mở tài-khoản trong sàn, nộp cryptocurrency vào, đổi từ tiền này sang tiền khác, mua-bán tiền.</p>
+<p>Sàn-giao-dịch cryptocurrency hoạt-động như một ngân-hàng. Khách-hàng mở tài-khoản trong sàn, nộp cryptocurrency vào, đổi từ tiền này sang tiền khác, mua-bán tiền USDT bằng tiền fiat.</p>
 <p>Tài-khoản tiền trong blockchain phi-tập-trung tương-đương với tiền trong túi của bạn. Bạn hoàn-toàn kiểm-soát tiền đó.
 <br>Tài-khoản tiền trong sàn-giao-dịch tương-đương với tài-khoản tiền của bạn trong ngân-hàng. Bạn phụ-thuộc vào dịch-vụ của ngân-hàng khi dùng tiền đó.</p>
 <p>Do sàn-giao-dịch tương-đương ngân-hàng nên các công-ty dịch-vụ thẻ-thanh-toán quốc-tế như VISA, MasterCard đã liên-kết với các sàn-giao-dịch để phát-hành thẻ debit liên-kết với tài-khoản của khách-hàng. Khi khách-hàng mua-sắm tiền fiat qua thẻ thì sàn sẽ bán cryptocurrency của khách thành tiền fiat trả cho bên-bán-hàng.</p>
-<p><a href="#pi">Pi Network</a> là một loại cryptocurrency hướng tới khả-năng giao-dịch thuận-tiện cho mọi-người nên không cần đến sàn-giao-dịch. Khi dùng Pi để mua-sám, người-mua scan QR code tài-khoản Pi của người-bán để trả Pi trong tích-tắc. Chủ-tài-khoản Pi cũng có-thể dùng sàn-giao-dịch để mua-bán Pi với các loại tiền khác.</p>
+<p><a href="#pi">Pi Network</a> là một loại cryptocurrency hướng tới khả-năng giao-dịch thuận-tiện cho mọi-người nên không cần đến sàn-giao-dịch. Khi dùng Pi để mua-sám, người-mua scan QR code tài-khoản Pi của người-bán để trả Pi trong tích-tắc. Chủ-tài-khoản Pi cũng có-thể dùng sàn-giao-dịch để đổi Pi với các loại tiền khác.</p>
+<p>Để mở-tài-khoản trong sàn-giao-dịch, khách-hàng cũng phải qua KYC như mở tài-khoản ở ngân-hàng. Mặc-dù sàn-giao-dịch hoạt-động trong Internet toàn-cầu nhưng tuỳ-theo quy-định của pháp-luật mỗi nước, mỗi sàn-giao-dịch có phạm-vi cung-cấp dịch-vụ khác nhau, có những sàn không nhận khách-hàng từ Việt-Nam hoặc một vài nước nào đó.</p>
 
 <h3 id="trade">Mua-bán Bitcoin như thế nào?</h3>
 <p>Người mua chuyển tiền cho người bán rồi người bán chuyển lượng bitcoin vào địa-chỉ tài-khoản của người mua. Bên mua bitcoin chỉ cần cho biết địa-chỉ dưới dạng dãy chữ-số hoặc một QR code là đủ.
@@ -293,7 +294,7 @@ Giao-dịch trên sàn thì tốn phí-giao-dịch, phí chuyển bitcoin vào v
 <h3 id="sweat">Sweat Economy</h3>
 <p>Sweat Economy là một token dựa trên blockchain <a href="https://near.org" target='_blank'>NEAR</a>. Mọi người đều có thể nhận được Sweat miễn-phí bằng cách đi-bộ. Khi đã có Sweat rồi, bạn có thể đem đổi ra tiền fiat ở các sàn-giao-dịch, hoặc đem staking (tương-tự như gửi tiết-kiệm để lấy lời). Tài-khoản của Sweat dùng nền-tảng blockchain của NEAR, mọi giao-dịch liên-quan đến tài-khoản Sweat phải trả phí—gas bằng NEAR token.</p>
 <p>Bạn cần hai app Sweatcoin và Sweat Wallet trong smartphone để nhận Sweat. App Sweatcoin đếm số bước-chân bằng sensor của smartphone. Mỗi ngày Sweatcoin sẽ chuyển cho Sweat Wallet 5000 bước-chân đầu-tiên, số bước-chân từ 5001 trở đi được đổi thành Sweatcoin. Sweatcoin được dùng để đổi phiếu-giảm-giá ở các đối-tác của Sweat, hoặc được dùng để góp quỹ-từ-thiện.
-<br>App Sweat Wallet ghi số bước-chân và thời-gian đi vào blockchain, đổi số bước-chân ra Sweat token. Số bước-chân cho một Sweat tăng dần theo thời-gian để làm cho Sweat ngày càng hiếm, càng có giá. Vào ngày 18/01/2023 phải đi 2500 bước mới được một Sweat. Đến năm 2028 thì phải đi 80.200 bước mới được một Sweat. Hiện-nay giá Sweat token chỉ khoảng một cent Mỹ, không đáng để đổi Sweat token lấy tiền fiat nhưng dùng để có kinh-nghiệm với tiền-điện-tử thì tốt.</p>
+<br>App Sweat Wallet ghi số bước-chân và thời-gian đi vào blockchain, đổi số bước-chân ra Sweat token. Số bước-chân cho một Sweat tăng dần theo thời-gian để làm cho Sweat ngày càng hiếm, càng có giá. Vào ngày 18/01/2023 phải đi 2500 bước mới được một Sweat. Đến năm 2028 thì phải đi 80.200 bước mới được một Sweat. Khó tạo ra như-vạy nhưng hiện-nay giá Sweat token chỉ khoảng một cent Mỹ, không đáng để đổi Sweat token lấy tiền fiat nhưng dùng để có kinh-nghiệm giao-dịch tiền-điện-tử thì tốt.</p>
 <h4>Cài app</h4>
 <p>Bạn bắt-đầu bằng-cách cài app Sweatcoin vào smartphone qua <a href="https://sweatco.in/app/sf/bile44591842225" target='_blank'>link sau</a>. Khi bạn cài app qua link đó, tôi được thưởng năm Sweatcoin, tôi sẽ dùng số Sweatcoin đó để góp các quỹ từ-thiện.</p>
 <p>Sau khi cài app Sweatcoin, bạn mở app và tạo tài-khoản. Sweatcoin cần có quyền dùng sensor để đếm bước-chân. Bạn hãy để smartphone trong túi áo, hoặc túi quần, hoặc túi đeo bên người, hoặc để trong một cái bao đeo ở bắp-tay khi đi lại trong nhà hoặc ngoài trời. App Sweatcoin cũng đếm được số vòng đạp xe-đạp nếu bạn để smartphone trong túi quần.</p>
@@ -319,6 +320,7 @@ Giao-dịch trên sàn thì tốn phí-giao-dịch, phí chuyển bitcoin vào v
 <h4>Swap</h4>
 <p>Bạn có thể swap—đổi-tiền từ Sweat sang NEAR ngay trong app Sweat Wallet hoặc tại <a href="https://ref.finance" target='_blank'>ref.finance</a>.
 <br>Bạn phải trả phí khi giao-dịch. Trước-đây thì trả phí bằng NEAR, trước khi thực-hiện giao-dịch thì bạn cần phải có ít nhất 0,1 NEAR, bạn cần phải mua NEAR bằng tiền fiat từ <a href="https://wallet.near.org" target='_blank'>wallet NEAR</a>, hoặc mua qua link trong app Sweat Wallet. Hiện-nay đã có-thể trả phí bằng Sweat khi giao-dịch trong app Sweat Wallet, và có-thể giảm phí bằng cách xem quảng-cáo.</p>
+<p>Bạn cũng có-thể nạp tiền Sweat vào các <a href="#tradeplatform">sàn-giao-dịch</a> như <a href="https://okx.com/join/54138033" target='_blank'>OKX</a>, rồi convert từ Sweat sang USDT… Sau-đó, bạn có thể bán USDT để lấy tiền VND qua P2P trong OKX.</p>
 
 <h4>Tương-lai</h4>
 <p>Sweatcoin sẽ ghi nhận được thêm các kiểu hoạt-động cơ-thể khác ngoài bước-chân.
